--- a/public/contact.html
+++ b/public/contact.html
@@ -19,10 +19,8 @@
     </nav>
     <section class="h-screen flex items-center justify-start bg-white">
         <div class="ml-16">
-            <h1 class="text-5xl font-bold text-gray-800 mb-4">Welcome</h1>
-            <p class="text-lg text-gray-600">To an experimental http server!</p>
-            <button class="mt-6 px-6 py-2 bg-indigo-500 text-white rounded-full hover:bg-indigo-600">Get
-                Started</button>
+            <h1 class="text-5xl font-bold text-gray-800 mb-4">Contact us</h1>
+            <p class="text-lg text-gray-600">Welcome to contact us page!</p>
         </div>
     </section>
 </body>
